[package]
name = "statusbar-rs"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
hidapi = "2.4.1"
libpulse-binding = { version = "2.28.1", default-features = false, features = ["pa_v15"] }
thiserror = "1.0.50"
zbus = { version = "3.14.1", default-features = false, features = ["blocking", "tokio"] }
