[package]
name = "statusbar-rs"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
hidapi = "2.6.1"
libpulse-binding = { version = "2.28.1", default-features = false, features = ["pa_v15"] }
thiserror = "2.0.0"
zbus = { version = "5.0.0", default-features = false, features = ["blocking-api", "tokio"] }
