[package]
name = "statusbar-rs"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
hidapi = "2.6.1"
libpulse-binding = { version = "2.28.1", default-features = false, features = ["pa_v15"] }
thiserror = "2.0.0"
zbus = { version = "5.0.0", default-features = false, features = ["blocking-api", "tokio"] }
nix = { version = "0.30.0", default-features = false, features = ["fs", "net"], optional = true }
xdg = "3.0.0"
env-file-reader = "0.3.0"
ureq = { version = "3.0.11", default-features = false, features = ["native-tls", "json"] }

[features]
chris = ["dep:nix"]
janne = []